--- a/glossary.html
+++ b/glossary.html
@@ -73,8 +73,8 @@
                             <dd>Authenticatie die plaatsvindt door twee vormen van authenticatie te combineren.</dd>
 
                             <dt>Screening</dt>
-                            <dd>Het identificeren van personen of voertuigen, bijvoorbeeld met camera's. Het doel 
-                                is om actie te ondernemen als de persoon of het voertuig op een lijst staat.</dd>
+                            <dd>Het identificeren van personen of voertuigen, bijvoorbeeld met camera's. Het doel is 
+                                om actie te ondernemen als de persoon of het voertuig op een lijst staat.</dd>
 
                             <dt>Integriteit</dt>
                             <dd>De bescherming van gegevens tegen verlies of (on)bedoelde wijzigingen.</dd>
@@ -99,12 +99,12 @@
                                 minimaal twee verschillende manieren, waarvan één kopie altijd op een aparte locatie.</dd>
 
                             <dt>Encryptie</dt>
-                            <dd>Het husselen van een bericht of een bestand met een sleutelen. Zonder de 
-                                sleutel kun je het oorspronkelijke bericht niet terugkrijgen.</dd>
+                            <dd>Het husselen van een bericht of een bestand met een sleutelen. Zonder de sleutel kun 
+                                je het oorspronkelijke bericht niet terugkrijgen.</dd>
 
                             <dt>Hashing</dt>
-                            <dd>Het husselen van een bericht, zonder dat je terug kunt naar het origineel. 
-                                Hetzelfde bericht twee keer hashen levert altijd dezelfde hash op.</dd>
+                            <dd>Het husselen van een bericht, zonder dat je terug kunt naar het origineel. Hetzelfde 
+                                bericht twee keer hashen levert altijd dezelfde hash op.</dd>
 
                             <dt>DDoS-aanval</dt>
                             <dd>Een aanval waarbij een bepaalde service (tijdelijk) onbeschikbaar wordt gemaakt.</dd>
@@ -113,15 +113,154 @@
                 </article>
 
                 <article id="bedreiging">
-                    <p>lorum</p>
+                    <h2>2. Bedreigingen</h2>
+
+                    <div class="glossary">
+                        <dl>
+                            <dt>Zwakheden in de architectuur</dt>
+                            <dd>Een zwakheid die gebruik maakt van een tekortkoming in één van de lagen van de 
+                                architectuur, of in de communicatie tussen twee lagen.</dd>
+
+                            <dt>Lek</dt>
+                            <dd>Een synoniem voor zwakheid in software. Wordt vaak in het nieuws gebruikt om aan te 
+                                duiden dat een zwakheid door kwaadwillende partijen is gebruikt om schade aan te richten.</dd>
+
+                            <dt>Architectuur testen</dt>
+                            <dd>Proberen om architectuur aan te vallen en zwakheden te ontdekken, voordat iemand met 
+                                kwade bedoelingen dat doet.</dd>
+
+                            <dt>Zwakheden in de communicatie</dt>
+                            <dd>Een zwakheid die gebruik maakt van een tekortkoming in de communicatie tussen 
+                                verschillende systemen.</dd>
+
+                            <dt>Man-in-the-middle aanval</dt>
+                            <dd>Aanval waarbij de verbinding tussen twee apparaten wordt afgeluisterd.</dd>
+
+                            <dt>SSL-certificaat</dt>
+                            <dd>Een certificaat met gegevens over de eigenaar van een website.</dd>
+
+                            <dt>End-to-end-encryption</dt>
+                            <dd>Een vorm van encryptie waarbij alleen de verzender en de ontvanger het oorspronkelijke 
+                                bericht kunnen lezen.</dd>
+                            
+                            <dt>Zwakheden bij gebruikers</dt>
+                            <dd>Een zwakheid die gebruik maakt van mensen en hun gedrag.</dd>
+
+                            <dt>Brute force</dt>
+                            <dd>Het kraken van een wachtwoord door zo snel mogelijk verschillende wachtwoorden te 
+                                proberen.</dd>
+
+                            <dt>Entropie</dt>
+                            <dd>De mate van willekeur in bepaalde informatie.</dd>
+
+                            <dt>Passwordmanager</dt>
+                            <dd>Software die sterke wachtwoorden genereert en veilig bewaart.</dd>
+
+                            <dt>Social engineering</dt>
+                            <dd>Een methode die aanvallers gebruiken om mensen te bewerken.</dd>
+
+                            <dt>Phishing</dt>
+                            <dd>Een methode die aanvallers gebruiken om mensen naar een valse website te lokken, 
+                                waar slachtoffers hun inloggegevens achterlaten.</dd>
+
+                            <dt>Zero day kwetsbaarheid</dt>
+                            <dd>Een kweetsbaarheid of zwakke plek die nog niet bekend is bij de softwareontwikkelaar.</dd>
+
+                            <dt>Malware</dt>
+                            <dd>Kwaadaardige software.</dd>
+
+                            <dt>Trojan horse</dt>
+                            <dd>Een type malware dat zich vermomt als een ander bestand, zoals een e-mailbijlage.</dd>
+
+                            <dt>Worm</dt>
+                            <dd>Een type malware dat zichzelf verspreidt, en als het ware door een netwerk heen 'wurmt'.</dd>
+
+                            <dt>Virus</dt>
+                            <dd>Een type malware dat andere sofrware infecteert en zich op die manier verspreidt.</dd>
+
+                            <dt>Spyware</dt>
+                            <dd>Een type malware dat informatie over het computergebruik probeert te achterhalen.</dd>
+
+                            <dt>Adware</dt>
+                            <dd>Een type malware dat advertenties probeert weer te geven.</dd>
+
+                            <dt>Ransomware</dt>
+                            <dd>Een type malware dat gegevens versleutelt en geld vraagt voor de sleutel.</dd>
+                        </dl>
+                    </div>
                 </article>
 
                 <article id="aanvallers-en-verdedigers">
-                    <p>ipsum</p>
+                    <h2>3. Aanvallers en verdedigers</h2>
+                    
+                    <dl>
+                        <dt>Computercriminaliteit</dt>
+                        <dd>Een vorm van criminaliteit waar ICT zowel middel als doel is.</dd>
+
+                        <dt>Diefstal van data</dt>
+                        <dd>Het stelen van gegevens die niet van jou zijn. Vaak worden ze doorverkocht.</dd>
+
+                        <dt>Identiteitsfraude</dt>
+                        <dd>Het uitvoeren van criminele activiteiten onder andermans naam.</dd>
+
+                        <dt>Fraude</dt>
+                        <dd>Een vorm van oplichting die vaak als doel heeft om mensen geld afhandig te maken.</dd>
+
+                        <dt>Afpersing</dt>
+                        <dd>Gebruik maken van gegevens om iemand te dwingen iets te doen.</dd>
+
+                        <dt>Computervredebreuk</dt>
+                        <dd>Wettelijke term voor hacken: het ongeoorloofd binnendringen in een computersysteem 
+                            of in een netwerk.</dd>
+
+                        <dt>Ethisch hacken</dt>
+                        <dd>Hacken met als doel een systeem, vaak op internet, veiliger te maken.</dd>
+
+                        <dt>Responsible disclosure</dt>
+                        <dd>Het verantwoordelijk omgaan met een gevonden beveiligingslek door het eerst te melden bij 
+                            degene die verantwoordelijk is. Na verloop van tijd wordt het lek openbaar gemaakt.</dd>
+                    </dl>
                 </article>
 
                 <article id="maatregelen">
-                    <p>dolor sit amet</p>
+                    <h2>4. Maatregelen</h2>
+
+                    <dl>
+                        <dt>Vier vormen van beveiligingsmaatregelen</dt>
+                        <dd>Preventie, detectie, repressie en correctie</dd>
+
+                        <dt>Preventieve beveiligingsmaatregel</dt>
+                        <dd>Maatregel die als doel heeft om bedreigingen aan de digitale veiligheid te voorkomen.</dd>
+
+                        <dt>Sandboxing</dt>
+                        <dd>Het laten draaien van apps in hun eigen afgesloten ruimte.</dd>
+
+                        <dt>Detecterende beveiligingsmaatregel</dt>
+                        <dd>Maatregel die als doel heeft om bedreigingen aan de digitale veiligheid te herkennen.</dd>
+
+                        <dt>Firewall</dt>
+                        <dd>Een hulpmiddel bij detectie, dat al het binnenkomende netwerkverkeer scant en controleert.</dd>
+
+                        <dt>Repressieve beveiligingsmaatregel</dt>
+                        <dd>Maatregel die als doel heeft om een bedreiging aan de digitale veiligheid te stoppen.</dd>
+
+                        <dt>Correctieve maatregel</dt>
+                        <dd>Maatregel die als doel heeft om de schade van een bedreiging aan de digitale veiligheid te herstellen.</dd>
+
+                        <dt>Caesar-encryptie</dt>
+                        <dd>Een manier van encryptie, waar iedere letter in een bericht wordt veranderd in de letter 
+                            die een aantal plaatsen verder in het alfabet staat.</dd>
+
+                        <dt>Symmetrische encryptie</dt>
+                        <dd>Encryptie die gebruik maakt van één sleutel.</dd>
+
+                        <dt>Asymmetrische encryptie</dt>
+                        <dd>Encryptie die gebruik maakt van twee sleutels.</dd>
+
+                        <dt>Public key encryptie</dt>
+                        <dd>Een vorm van asymmetrische encryptie waar een publieke en geheime sleutel gebruikt worden 
+                            om één kant op versleuteld te kunnen communiceren.</dd>
+                    </dl>
                 </article>
             </main>
         </div>
