--- a/content.html
+++ b/content.html
@@ -79,12 +79,12 @@
                     
                     <!-- H1.2 -->
                     <h4>
-                        <a href="glossary.html#maatregelen">Vertrouwelijkheid</a>
+                        <a href="glossary.html#digitale-veiligheid">Vertrouwelijkheid</a>
                     </h4>
 
                     <p>
                         Om toegang te krijgen tot persoonlijke gegevens, is er ten eerste een controle nodig om te kijken of 
-                        jij wel toegang hebt tot de gegevens (<a href="glossary.html#maatregelen">authenticatie</a>). Dit kan 
+                        jij wel toegang hebt tot de gegevens (<a href="glossary.html#digitale-veiligheid">authenticatie</a>). Dit kan 
                         door middel van:
                     </p>
 
@@ -96,35 +96,35 @@
 
                     <p>
                         Je kan je persoonlijke gegevens veiliger stellen, door middel van 
-                        <a href="glossary.html#maatregelen">twee factor authenticatie</a> (<i>2FA</i>). Dan gebruik je twee 
+                        <a href="glossary.html#digitale-veiligheid">twee factor authenticatie</a> (<i>2FA</i>). Dan gebruik je twee 
                         middelen van authenticeren, bijvoorbeeld een wachtwoord én je vingerafdruk.
                     </p>
 
                     <p>
-                        Behalve authenticatie is er ook nog sprake van <a href="glossary.html#maatregelen">identificatie</a>. 
+                        Behalve authenticatie is er ook nog sprake van <a href="glossary.html#digitale-veiligheid">identificatie</a>. 
                         De service wil weten wie je bent. Dit kan door het invullen van je gebruikersnaam en wachtwoord of 
                         door het gebruiken van je biometrische kenmerken. Tenslotte wordt er ook nog 
-                        <a href="glossary.html#maatregelen">geverifieerd</a> om te kijken of je wel bent wie je zegt dat je 
+                        <a href="glossary.html#digitale-veiligheid">geverifieerd</a> om te kijken of je wel bent wie je zegt dat je 
                         bent. Dit is alleen mogelijk als er al gegevens van jou bekend zijn. 
                     </p>
 
                     <p>
                         Een techniek die verwant is aan authenticatie, identificatie en verificatie is 
-                        <a href="glossary.html#maatregelen">screening</a>. Hierbij worden personen of objecten 
+                        <a href="glossary.html#digitale-veiligheid">screening</a>. Hierbij worden personen of objecten 
                         geïdentificeerd, met de bedoeling om informatie te krijgen over dit persoon. 
                     </p>
 
                     <!-- H1.3 -->
                     <h4>
-                        <a href="glossary.html#maatregelen">Integriteit</a>
+                        <a href="glossary.html#digitale-veiligheid">Integriteit</a>
                     </h4>
                     <p>
                         In Magister kunnen alleen docenten cijfers invoeren, terwijl leerlingen ze alleen kunnen bekijken. 
                         Dit komt omdat docenten meer rechten hebben dan leerlingen. Magister controleert dus de toegang en 
-                        <a href="glossary.html#maatregelen">rechten</a> van een gebruiker, die gekoppeld zijn aan hun 
-                        <a href="glossary.html#maatregelen">rol</a>. Docenten hebben meer rechten dan leerlingen, en beheerders 
+                        <a href="glossary.html#digitale-veiligheid">rechten</a> van een gebruiker, die gekoppeld zijn aan hun 
+                        <a href="glossary.html#digitale-veiligheid">rol</a>. Docenten hebben meer rechten dan leerlingen, en beheerders 
                         hebben de meeste rechten. Toegangscontrole valt onder vertrouwelijkheid, terwijl de controle van 
-                        rechten <a href="glossary.html#maatregelen">autorisatie</a> of integriteitscontrole wordt genoemd.
+                        rechten <a href="glossary.html#digitale-veiligheid">autorisatie</a> of integriteitscontrole wordt genoemd.
                     </p>
 
                     <p>
@@ -153,7 +153,7 @@
                     <!-- Checksums en IBANs -->
                     <p>
                         Bij het delen van een bestand, zoals via internet of USB, kan de ontvanger de integriteit controleren 
-                        met een <a href="glossary.html#maatregelen">checksum</a>, een soort vingerafdruk van het bestand. Als 
+                        met een <a href="glossary.html#digitale-veiligheid">checksum</a>, een soort vingerafdruk van het bestand. Als 
                         de checksums overeenkomen, is het bestand exact hetzelfde als het origineel. Dit wordt vaak gebruikt 
                         bij het downloaden van installatiebestanden.
                     </p>
@@ -169,7 +169,7 @@
 
                     <!-- H1.4 -->
                     <h4>
-                        <a href="glossary.html#maatregelen">Beschikbaarheid</a>
+                        <a href="glossary.html#digitale-veiligheid">Beschikbaarheid</a>
                     </h4>
 
                     <p>
@@ -186,7 +186,7 @@
                     </p>
 
                     <p>
-                        Beveiligingexperts adviseren het <a href="glossary.html#maatregelen">3-2-1-systeem voor back-ups</a>: 
+                        Beveiligingexperts adviseren het <a href="glossary.html#digitale-veiligheid">3-2-1-systeem voor back-ups</a>: 
                         drie kopieën van de data, opgeslagen op twee verschillende manieren, met één kopie op een andere 
                         locatie. Bijvoorbeeld, foto's kunnen op je computer worden opgeslagen, geprint thuis, en op een 
                         externe harde schijf bij een vriend.
@@ -207,13 +207,13 @@
                     </p>
 
                     <p>
-                        <a href="glossary.html#maatregelen">Encryptie</a> wordt ook gebruikt om communicatie te beveiligen, 
+                        <a href="glossary.html#digitale-veiligheid">Encryptie</a> wordt ook gebruikt om communicatie te beveiligen, 
                         zoals bij WhatsApp's end-to-end versleuteling. Hierdoor kunnen alleen de gesprekspartners de berichten 
                         lezen of beluisteren.
                     </p>
 
                     <p>
-                        <a href="glossary.html#maatregelen">Hashing</a> wordt gebruikt voor het veilig opslaan van wachtwoorden 
+                        <a href="glossary.html#digitale-veiligheid">Hashing</a> wordt gebruikt voor het veilig opslaan van wachtwoorden 
                         en vingerafdrukken. Hierbij wordt de originele data omgezet in een hash, die niet terug kan naar de 
                         originele data. Bij een inlogpoging wordt het ingevoerde wachtwoord gehasht en vergeleken met de 
                         opgeslagen hash. Als deze overeenkomen, is het wachtwoord correct. 
@@ -227,7 +227,7 @@
                     <!-- H1.4 DDoS -->
                     <p>
                         Websites zoals je webmail, bank en OV-planner moeten zo veel mogelijk beschikbaar zijn. 
-                        <a href="glossary.html#maatregelen">DDoS-aanvallen</a> (Distributed Denial Of Service) kunnen diensten 
+                        <a href="glossary.html#digitale-veiligheid">DDoS-aanvallen</a> (Distributed Denial Of Service) kunnen diensten 
                         tijdelijk onbeschikbaar maken door overbelasting. Bijvoorbeeld, de schoolwebsite ontvangt gemiddeld 100 
                         aanvragen per minuut. Bij een DDoS-aanval worden duizenden aanvragen per seconde gedaan. De webservers 
                         kunnen dit niet aan en zal daardoor crashen. 
