--- a/simulation.html
+++ b/simulation.html
@@ -8,8 +8,35 @@
 </head>
 
 <body>
-    <main id="wrapper">
-        <div id="phase-1" class="container">
+    <div id="phase-3">
+        <main class="wrapper">
+            <div id="line-1">
+                <p>
+                    Initializing <c-green>error repair module</c-green>...<br>
+                    Scanning for anomalies in system files...<br>
+                    Error detected. Commencing repair...<br>
+                    Analyzing error source...<br>
+                    <c-red>Virus identified.</c-red> Attempting to resolve...<br>
+                </p>
+            </div>
+
+            <div id="line-2">
+                <p>█ 7% Waiting for core components...</p>
+                <p>██ 15% Initiating virus removal...</p>
+                <p>███ 26% Analyzing patterns and anomalies...</p>
+                <p>████ 42% Isolating infected files...</p>
+                <p>██████ 68% Attempting neutralization...</p>
+                <p>████████ 89% Removing virus components...</p>
+                <p>██████████ 99% Finishing up...</p>
+                <p>██████████ 99% Error encountered...</p>
+            </div>
+        </main>
+    </div>
+    
+
+        <!-- error found, starting repair, error virus, unable to fix, containment protocol and wiping of data, 99%, prank :) -->
+
+        <!-- <div id="phase-1" class="container">
 
         </div>
 
@@ -28,7 +55,10 @@
                 <p>█████████ ??% Error encountered</p>
             </div>
         </div>
-    </main>
+
+        <div id="phase-3" class="container">
+
+        </div> -->
 </body>
 
 </html>
