--- a/about-us.html
+++ b/about-us.html
@@ -65,7 +65,7 @@
                         extraatje hebben we een paar foto's ingevoegd van vroegere ontwerpen en ideeën.
                     </p>
 
-                    <div class="photos">
+                    <div class="photos"> <!-- Hier is gekozen om flexbox te gebruiken in plaats van float voor de flexibiliteit -->
                         <div></div>
                         <div></div>
                         <div></div>
