foto's about us

--- a/about-us.html
+++ b/about-us.html
@@ -66,9 +66,25 @@
                     </p>
 
                     <div class="photos"> <!-- Hier is gekozen om flexbox te gebruiken in plaats van float voor de flexibiliteit -->
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <a target="_blank" href="attachments/design-v1.png">
+                                <img src="attachments/design-v1.png" alt="Design v1 homepagina">
+                            </a>
+                            <p>Design v1</p>
+                        </div>
+                        <div>
+                            <a target="_blank" href="attachments/design-v2.png">
+                                <img src="attachments/design-v2.png" alt="Design v2 homepagina">
+                            </a>
+                            <p>Design v2</p>
+                        </div>
+
+                        <div>
+                            <a target="_blank" href="attachments/design-v3.png">
+                                <img src="attachments/design-v3.png" alt="Design v2 homepagina">
+                            </a>
+                            <p>Design v3</p>
+                        </div>
                     </div>
                 </article>
 
