--- a/about-us.html
+++ b/about-us.html
@@ -101,9 +101,15 @@
                         <h2 class="goals">Functies</h2>
 
                         <ol>
-                            <li>Lorum</li>
-                            <li>ipsum</li>
-                            <li>dolor</li>
+                            <li>
+                                <a href="content.html">Samenvatting Fundament Security</a>
+                            </li>
+                            <li>
+                                <a href="content.html">Begrippen Fundament Security</a>
+                            </li>
+                            <li>
+                                <a href="simulation.html">???</a>
+                            </li>
                             <li>sit</li>
                             <li>amet</li>
                         </ol>
@@ -112,7 +118,10 @@
             </main>
         </div>
     </div>
-
+    
+    <footer>
+        <p>Deze website is gemaakt door Xingqi Zhao en Matthijs Rodts | Stanislascollege Westplantsoen</p>
+    </footer>
 </body>
 
 </html>
