--- a/glossary.html
+++ b/glossary.html
@@ -261,7 +261,10 @@
             </main>
         </div>
     </div>
-
+    
+    <footer>
+        <p>Deze website is gemaakt door Xingqi Zhao en Matthijs Rodts | Stanislascollege Westplantsoen</p>
+    </footer>
 </body>
 
 </html>
