--- a/content.html
+++ b/content.html
@@ -831,7 +831,10 @@
             </main>
         </div>
     </div>
-
+    
+    <footer>
+        <p>Deze website is gemaakt door Xingqi Zhao en Matthijs Rodts | Stanislascollege Westplantsoen</p>
+    </footer>
 </body>
 
 </html>
