--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                 </article>
+
+                <footer>
+                    <p>Deze website is gemaakt door Xingqi Zhao en Matthijs Rodts | Stanislascollege Westplantsoen</p>
+                </footer>
             </main>
         </div>
     </div>
