complete simulation, phase-3

--- a/simulation.html
+++ b/simulation.html
@@ -30,35 +30,55 @@
                 <p>██████████ 99% Finishing up...</p>
                 <p>██████████ 99% Error encountered...</p>
             </div>
+
+            <div id="line-3">
+                <p>
+                    ██████████ 99% Error encountered...<br>
+                    Virus spreading. Initiating protocol.
+                </p>
+            </div>
+
+            <div id="line-4">
+                <p><c-yellow><!-- prevents whitespace
+-->                                                          88             
+                                       ,d                 ""             
+                                       88                                
+ ,adPPYba,   ,adPPYba,   8b,dPPYba,  MM88MMM  ,adPPYYba,  88  8b,dPPYba, 
+a8"     ""  a8"     "8a  88P'   `"8a   88     ""     `Y8  88  88P'   `"8a
+8b          8b       d8  88       88   88     ,adPPPPP88  88  88       88
+"8a,   ,aa  "8a,   ,a8"  88       88   88,    88,    ,88  88  88       88
+ `"Ybbd8"'   `"YbbdP"'   88       88   "Y888  `"8bbdP"Y8  88  88       88
+                </c-yellow></p>
+            </div>
+
+            <div id="line-5">
+                <p>
+                    Backing up data...<br>
+                    Seperating files into groups...<br>
+                    Preparing self destruction...<br>
+                    <c-red>WARNING! PLEASE FIND COVER IMMEDIATELY!</c-red><br>
+                    Destruction sequence in ::<br>
+                </p>
+            </div>
+
+            <div id="line-6">
+                <p>
+                    5<br>
+                    4<br>
+                    3<br>
+                    2<br>
+                    1<br>
+                </p>
+            </div>
+
+            <div id="line-7">
+                <p>
+                    No vestiges found...<br>
+                    Neutralization successful. Restarting system... :)<br>
+                </p>
+            </div>
         </main>
     </div>
-    
-
-        <!-- error found, starting repair, error virus, unable to fix, containment protocol and wiping of data, 99%, prank :) -->
-
-        <!-- <div id="phase-1" class="container">
-
-        </div>
-
-        <div id="phase-2" class="container">
-            <div class="warning container">
-                <h1>:(</h1>
-            </div>
-
-            <div class="text container">
-                <p>█ 14% Initialization</p>
-                <p>██ 29% Scanning system</p>
-                <p>███ 45% Diagnozing issues</p>
-                <p>█████ 67% Fixing</p>
-                <p>██████ 83% Checking status</p>
-                <p>████████ 99% Finishing up</p>
-                <p>█████████ ??% Error encountered</p>
-            </div>
-        </div>
-
-        <div id="phase-3" class="container">
-
-        </div> -->
 </body>
 
 </html>
