--- a/content.html
+++ b/content.html
@@ -5,7 +5,7 @@
     <title>Inhoud | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
