--- a/simulation.html
+++ b/simulation.html
@@ -1,10 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <title>Simulation | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="simulation.css"/>
+    <link rel="stylesheet" type="text/css" href="simulation.css">
 </head>
 
 <body>
