sitemap + halve kleurenstaal

--- a/about-us.html
+++ b/about-us.html
@@ -65,7 +65,7 @@
                         extraatje hebben we een paar foto's ingevoegd van vroegere ontwerpen en ideeën.
                     </p>
 
-                    <div class="photos"> <!-- Hier is gekozen om flexbox te gebruiken in plaats van float voor de flexibiliteit -->
+                    <div class="photos three-img"> <!-- Hier is gekozen om flexbox te gebruiken in plaats van float voor de flexibiliteit -->
                         <div>
                             <a target="_blank" href="attachments/design-v1.png">
                                 <img src="attachments/design-v1.png" alt="Design v1 homepagina">
@@ -84,6 +84,47 @@
                                 <img src="attachments/design-v3.png" alt="Design v2 homepagina">
                             </a>
                             <p>Design v3</p>
+                        </div>
+                    </div>
+
+                    <h2>Sitemap</h2>
+                    
+                    <p>
+                        In principe is de sitemap hetzelfde gebleven als in de ontwerpfase, maar hebben we nu een 
+                        simulatie toegevoegd in plaats van een geheime knop. De sitemap ziet er als volgt uit:
+                    </p>
+                    <div class="photos two-img">
+                        <div>
+                            <a target="_blank" href="attachments/design-v1-sitemap.png">
+                                <img src="attachments/design-v1-sitemap.png" alt="Design v1 sitemap">
+                            </a>
+                            <p>Sitemap v1</p>
+                        </div>
+                        
+                        <div>
+                            <a target="_blank" href="attachments/design-v2-sitemap.png">
+                                <img src="attachments/design-v2-sitemap.png" alt="Design v2 sitemap">
+                            </a>
+                            <p>Sitemap v2</p>
+                        </div>
+                    </div>
+
+                    <h2>Kleurenstaal</h2>
+                    <p>
+                        Tijdens de ontwerpfase hadden we een kleurenpalette met 5 kleuren gebruikt, maar uiteindelijk hebben we meer kleuren gebruikt, namelijk 10.
+                    </p>
+                    <div class="photos two-img">
+                        <div>
+                            <a target="_blank" href="attachments/kleuren-v1.png">
+                                <img src="attachments/kleuren-v1.png" alt="Kleurenstaal v1">
+                            </a>
+                            <p>Kleurenstaal v1</p>
+                        </div>
+                        <div>
+                            <a target="_blank" href="attachments/">
+                                <img src="attachments/" alt="Kleurenstaal v2">
+                            </a>
+                            <p>Kleurenstaal v2</p>
                         </div>
                     </div>
                 </article>
