--- a/about-us.html
+++ b/about-us.html
@@ -111,7 +111,7 @@
 
                     <h2>Kleurenstaal</h2>
                     <p>
-                        Tijdens de ontwerpfase hadden we een kleurenpalette met 5 kleuren gebruikt, maar uiteindelijk hebben we meer kleuren gebruikt, namelijk 10.
+                        Tijdens de ontwerpfase hadden we een kleurenpalette met 5 kleuren bedacht, maar uiteindelijk dat is uiteindelijk vergroot naar 9 kleuren.
                     </p>
                     <div class="photos two-img">
                         <div>
@@ -121,8 +121,8 @@
                             <p>Kleurenstaal v1</p>
                         </div>
                         <div>
-                            <a target="_blank" href="attachments/">
-                                <img src="attachments/" alt="Kleurenstaal v2">
+                            <a target="_blank" href="attachments/kleuren-v2.png">
+                                <img src="attachments/kleuren-v2.png" alt="Kleurenstaal v2">
                             </a>
                             <p>Kleurenstaal v2</p>
                         </div>
