--- a/simulation.html
+++ b/simulation.html
@@ -5,11 +5,15 @@
     <title>Simulation | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="simulation.css">
+    <link rel="stylesheet" type="text/css" href="temp.css">
 </head>
 
 <body>
-    <div id="phase-3">
+    <div id="phase-1">
+        <p>placeholder</p>
+    </div>
+
+    <div id="phase-2">
         <main class="wrapper">
             <div id="line-1">
                 <p>
