colours, back link

--- a/simulation.html
+++ b/simulation.html
@@ -39,7 +39,7 @@
             <div id="line-3">
                 <p>
                     ██████████ 99% Error encountered...<br>
-                    Virus spreading. Initiating protocol.
+                    <c-red>Virus spreading.</c-red> Initiating protocol.
                 </p>
             </div>
 
@@ -58,11 +58,11 @@ a8"     ""  a8"     "8a  88P'   `"8a   88     ""     `Y8  88  88P'   `"8a
 
             <div id="line-5">
                 <p>
-                    Backing up data...<br>
+                    <c-green>Backing up data...</c-green><br>
                     Seperating files into groups...<br>
                     Preparing self destruction...<br>
                     <c-red>WARNING! PLEASE FIND COVER IMMEDIATELY!</c-red><br>
-                    Destruction sequence in ::<br>
+                    Destruction in ::<br>
                 </p>
             </div>
 
@@ -79,7 +79,7 @@ a8"     ""  a8"     "8a  88P'   `"8a   88     ""     `Y8  88  88P'   `"8a
             <div id="line-7">
                 <p>
                     No vestiges found...<br>
-                    Neutralization successful. Restarting system... :)<br>
+                    Neutralization successful. <a href="index.html">Restarting system... :)</a><br>
                 </p>
             </div>
         </main>
