--- a/simulation.html
+++ b/simulation.html
@@ -5,12 +5,23 @@
     <title>Simulation | Security informatica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="temp.css">
+    <link rel="stylesheet" type="text/css" href="simulation.css">
 </head>
 
 <body>
     <div id="phase-1">
-        <p>placeholder</p>
+        <div class="wrapper">
+            <div id="smile">
+                <h1>:</h1><h1>(</h1>
+            </div>
+            
+            <div id="warning">
+                <p>
+                    Your device ran into a problem and needs to restart. We're 
+                    just collecting some error info, and then we'll restart for you.
+                </p>
+            </div>
+        </div>
     </div>
 
     <div id="phase-2">
