--- a/simulation.html
+++ b/simulation.html
@@ -10,6 +10,19 @@
 
 <body>
     <div id="phase-1">
+        <div id="desktop">
+            <div>
+                <img src="/attachments/icon.png">
+                <p>Homework.exe</p>
+            </div>
+
+            <img src="/attachments/cursor.png">
+        </div>
+
+        <div id="taskbar"></div>
+    </div>
+
+    <div id="phase-2">
         <div class="wrapper">
             <div id="smile">
                 <h1>:</h1><h1>(</h1>
@@ -24,7 +37,7 @@
         </div>
     </div>
 
-    <div id="phase-2">
+    <div id="phase-3">
         <main class="wrapper">
             <div id="line-1">
                 <p>
