--- a/about-us.html
+++ b/about-us.html
@@ -127,6 +127,33 @@
                             <p>Kleurenstaal v2</p>
                         </div>
                     </div>
+
+                    <h2>Schematische tekeningen</h2>
+                    <p>
+                        Tijdens de ontwerpfase moesten we een schematische tekeningen maken over het ontwerp dat we op dat moment hadden. Onze designs zijn veranderd, dus zijn deze schematische tekeningen irrelevant.
+                    </p>
+                    <div class="photos three-img">
+                        <div>
+                            <a target="_blank" href="attachments/Schem-tek-home.png">
+                                <img src="attachments/Schem-tek-home.png" alt="Schematische tekenening homepagina">
+                            </a>
+                            <p>Schematische tekening home</p>
+                        </div>
+
+                        <div>
+                            <a target="_blank" href="attachments/Schem-tek-inhoud.png">
+                                <img src="attachments/Schem-tek-inhoud.png" alt="Schematische tekenening inhoud">
+                            </a>
+                            <p>Schematische tekening inhoud</p>
+                        </div>
+
+                        <div>
+                            <a target="_blank" href="attachments/Schem-tek-about-us.png">
+                                <img src="attachments/Schem-tek-about-us.png" alt="Schematische tekenening about us">
+                            </a>
+                            <p>Schematische tekening over ons</p>
+                        </div>
+                    </div>
                 </article>
 
                 <article id="functies">
