--- a/content.html
+++ b/content.html
@@ -131,8 +131,8 @@
                         Er zijn eisen die aan informatie gesteld worden, namelijk: volledigheid, relevantie, betrouwbaarheid, 
                         overzichtelijkheid, beschikbaarheid, doelgerichtheid. Integriteit van gegevens betekent dat de 
                         kwaliteit voldoet aan alle eisen en alleen verwerkt wordt door geautoriseerde gebruikers. Zoals bij 
-                        Magister, waarbij het afdwingen van gebruikersrechten zorgt voor correcte gegevens en dus is er sprake 
-                        van integriteit.
+                        Magister, waar het instellen van gebruikersrechten zorgt voor juiste informatie, en dus is er sprake van 
+                        integriteit.
                     </p>
 
                     <p>
@@ -145,7 +145,7 @@
                     </p>
 
                     <p>
-                        Het maken van back-ups is een gegarandeerde manier om de integriteit van je data te waarborgen. 
+                        Een andere manier om de integriteit van je data te garanderen, is door het maken van backups. 
                         In geval van onvoorziene problemen, kun je altijd terugkeren naar een eerdere staat waarin de 
                         data integer was.
                     </p>
@@ -173,7 +173,7 @@
                     </h4>
 
                     <p>
-                        Naast vertrouwelijkheid en integriteit is beschikbaarheid een derde aspect van dataveiligheid. Dit 
+                        Naast vertrouwelijkheid en integriteit is beschikbaarheid een derde aspect van digitale veiligheid. Dit 
                         betekent dat data altijd toegankelijk moet zijn, wat onderhoud vereist zoals het installeren van 
                         beveiligingsupdates of het vervangen van defecte hardware.
                     </p>
@@ -182,7 +182,8 @@
                         Als data onverwacht onbeschikbaar wordt, is een back-up essentieel. Dit kan via clouddiensten zoals 
                         OneDrive, Google Drive of iCloud Drive, of fysiek via een USB-stick of externe harde schijf. Het is 
                         belangrijk om fysieke back-ups op een andere locatie te bewaren dan de originele data om verlies door 
-                        calamiteiten zoals brand te voorkomen. Idealiter wordt een back-up op een andere fysieke locatie bewaard.
+                        onvoorspelbare rampen zoals brand te voorkomen. Idealiter wordt een back-up op een andere fysieke locatie 
+                        bewaard.
                     </p>
 
                     <p>
@@ -196,20 +197,19 @@
                     <p>
                         Toegangscontrole vereist veilige opslag en verzending van gegevens zoals wachtwoorden en 
                         vingerafdrukken. Een gehackte wachtwoorddatabase kan leiden tot ongeautoriseerde toegang tot 
-                        persoonlijke gegevens. Wachtwoorden kunnen worden gewijzigd, maar vingerafdrukken niet.
+                        persoonlijke gegevens. Wachtwoorden kan je nog wijzigen, maar vingerafdrukken niet.
                     </p>
 
                     <p>
                         Niet alleen inloggegevens, maar ook gevoelige bestanden op bijvoorbeeld een USB-stick of computer 
-                        moeten veilig worden opgeslagen. Encryptie kan hierbij helpen: met een sleutel (zoals een wachtwoord) 
-                        wordt de inhoud van een bestand wiskundig 'gehusseld'. Alleen met de sleutel kan de originele inhoud 
-                        worden hersteld.
+                        moeten veilig worden opgeslagen. <a href="glossary.html#digitale-veiligheid">Encryptie</a> kan hierbij 
+                        helpen: met een sleutel (zoals een wachtwoord) wordt de inhoud van een bestand wiskundig 'gehusseld'. 
+                        Alleen met de sleutel kan de originele inhoud worden hersteld.
                     </p>
 
                     <p>
-                        <a href="glossary.html#digitale-veiligheid">Encryptie</a> wordt ook gebruikt om communicatie te beveiligen, 
-                        zoals bij WhatsApp's end-to-end versleuteling. Hierdoor kunnen alleen de gesprekspartners de berichten 
-                        lezen of beluisteren.
+                        Encryptie wordt ook gebruikt om communicatie te beveiligen zoals bij WhatsApp's end-to-end versleuteling. 
+                        Hierdoor kan niemand meelezen of meeluisteren, behalve de persoon aan wie je berichten stuurt. 
                     </p>
 
                     <p>
@@ -273,10 +273,10 @@
                     </p>
 
                     <p>
-                        SQL-injectie is een specifiek geval waarbij een kwaadwillende de databasequery van een app manipuleert om 
-                        onbedoelde gegevensacties uit te voeren. Het is cruciaal om databaseverbindingen goed te beveiligen en 
-                        gebruikersinvoer te filteren. Deze zwakheden kunnen worden verholpen door ze zelf op te sporen en op te 
-                        lossen voordat ze worden misbruikt, vaak door ethische hackers.
+                        SQL-injectie is een hacktechniek waarbij kwaadaardige code wordt toegevoegd aan een databasequery. Dit kan 
+                        leiden tot ongeautoriseerde toegang tot of wijziging van gegevens. Het is essentieel om de databaseverbinding 
+                        te beveiligen en gebruikersinvoer te filteren om dit te voorkomen. Deze zwakheden kunnen worden verholpen door 
+                        ze zelf op te sporen en op te lossen voordat ze worden misbruikt. Dit wordt vaak gedaan door ethische hackers.
                     </p>
 
                     <!-- H2.3 -->
@@ -343,9 +343,10 @@
 
                     <p>
                         Op internet verschijnen vaak wachtwoordlijsten van gehackte servers. Hackers publiceren deze om mensen 
-                        bewust te maken en aan te zetten tot wachtwoordwijziging. Een voorbeeldwebsite is 
-                        <a href="https://haveibeenpwned.com/">haveibeenpwned.com</a>. Gestolen gegevens, zoals e-mailadressen en 
-                        telefoonnummers, worden soms verkocht en gebruikt voor gerichte nepmails om meer informatie te krijgen. 
+                        bewust te maken en aan te zetten tot wachtwoordwijziging. Een website waar je veel van deze wachtwoorden kan 
+                        vinden is <a target="_blank" href="https://haveibeenpwned.com/">haveibeenpwned.com</a>. Gestolen gegevens, 
+                        zoals e-mailadressen en telefoonnummers, worden soms verkocht en gebruikt voor gerichte nepmails om meer 
+                        informatie te krijgen. 
                     </p>
 
                     <!-- H2.5 -->
@@ -503,7 +504,7 @@
 
                     <p>
                         Er zijn veel vormen van computercriminaliteit, waarvan de belangrijkste 
-                        <a href="glossary.html#bedreiging">diefstal</a>, fraude, afpersing en inbraak is. Deze worden bestreden door 
+                        <a href="glossary.html#aanvallers-en-verdedigers">diefstal</a>, fraude, afpersing en inbraak is. Deze worden bestreden door 
                         gespecialiseerde beveiligingsbedrijven. Preventieve maatregelen kunnen veel problemen voorkomen. Bij 
                         computercriminaliteit is aangifte bij de politie raadzaam vanwege mogelijke ernstige gevolgen.
                     </p>
@@ -515,14 +516,14 @@
                     </p>
 
                     <p>
-                        <a href="glossary.html#bedreiging">Fraude</a> is een vorm van bedrog, vaak gericht op financieel gewin. Dit 
+                        <a href="glossary.html#aanvallers-en-verdedigers">Fraude</a> is een vorm van bedrog, vaak gericht op financieel gewin. Dit 
                         kan via phishing, spyware, online winkels, sociale media of online dating. Slachtoffers betalen vaak voor 
                         een product dat nooit aankomt, of geven geld aan iemand die zich online anders voordoet. Deze criminelen 
                         kunnen bijvoorbeeld geld vragen voor een zogenaamde vliegreis.
                     </p>
 
                     <p>
-                        Malware, zoals ransomware, kan worden gebruikt voor <a href="glossary.html#bedreiging">afpersing</a>. 
+                        Malware, zoals ransomware, kan worden gebruikt voor <a href="glossary.html#aanvallers-en-verdedigers">afpersing</a>. 
                         Criminelen kunnen dreigen om gevoelige gegevens openbaar te maken of compromitterende foto's te delen. Ze 
                         kunnen ook gestolen gegevens gebruiken om te beweren dat ze toegang hebben tot je webcam en bestanden, en 
                         dreigen deze te delen tenzij er wordt betaald. Dit is meestal een intimidatietactiek.
@@ -618,9 +619,9 @@
 
                     <p>
                         Preventieve beveiligingsmaatregelen, zoals het veilig maken en up-to-date houden van hard- en software, zijn 
-                        essentieel om problemen te voorkomen. Een voorbeeld hiervan is sandboxing, waarbij apps in een afgesloten 
-                        ruimte draaien met beperkte toegang, waardoor malware geen schade kan aanrichten. Dit zie je terug wanneer 
-                        een app toestemming vraagt voor toegang tot bepaalde functies op je telefoon.
+                        essentieel om problemen te voorkomen. Een voorbeeld hiervan is <a href="glossary.html#maatregelen">sandboxing</a>, 
+                        waarbij apps in een afgesloten ruimte draaien met beperkte toegang, waardoor malware geen schade kan aanrichten. 
+                        Dit zie je terug wanneer een app toestemming vraagt voor toegang tot bepaalde functies op je telefoon.
                     </p>
                     
                     <p>
@@ -650,10 +651,10 @@
                     </p>
 
                     <p>
-                        Een belangrijk hulpmiddel voor detectie is de firewall, die al het binnenkomende netwerkverkeer scant. Het 
-                        controleert datapakketten op kwaadaardige inhoud en verifieert of het verkeer afkomstig is van een 
-                        betrouwbare bron. Firewalls beschermen tegen hackers, malware en spam, en zijn beschikbaar voor zowel 
-                        computers als netwerken.
+                        Een belangrijk hulpmiddel voor detectie is de <a href="glossary.html#maatregelen">firewall</a>, die al het 
+                        binnenkomende netwerkverkeer scant. Het controleert datapakketten op kwaadaardige inhoud en verifieert of 
+                        het verkeer afkomstig is van een betrouwbare bron. Firewalls beschermen tegen hackers, malware en spam, en 
+                        zijn beschikbaar voor zowel computers als netwerken.
                     </p>
 
                     <p>
@@ -690,11 +691,11 @@
 
                     <p>
                         Encryptie is inderdaad een cruciale methode om te voorkomen dat gegevens in verkeerde handen vallen. De 
-                        Caesar-encryptie die je beschrijft, is een eenvoudige vorm van encryptie waarbij elke letter in de tekst 
-                        wordt verschoven langs het alfabet. Het is een historisch voorbeeld van hoe geheimhouding kan worden bereikt 
-                        in communicatie. Hoewel moderne encryptiemethoden veel geavanceerder zijn, illustreert de Caesar-encryptie 
-                        nog steeds het basisprincipe van het transformeren van gegevens om hun inhoud te verbergen. Het is 
-                        belangrijk op te merken dat, hoewel ik je kan helpen begrijpen hoe encryptie werkt, ik je niet kan helpen 
+                        <a href="glossary.html#maatregelen">Caesar-encryptie</a> is een eenvoudige vorm van encryptie waarbij elke 
+                        letter in de tekst wordt verschoven langs het alfabet. Het is een historisch voorbeeld van hoe geheimhouding 
+                        kan worden bereikt in communicatie. Hoewel moderne encryptiemethoden veel geavanceerder zijn, illustreert de 
+                        Caesar-encryptie nog steeds het basisprincipe van het transformeren van gegevens om hun inhoud te verbergen. 
+                        Het is belangrijk op te merken dat, hoewel ik je kan helpen begrijpen hoe encryptie werkt, ik je niet kan helpen 
                         bij het versleutelen of ontsleutelen van berichten. Veiligheid en privacy zijn van het grootste belang bij 
                         het omgaan met gevoelige informatie.
                     </p>
@@ -769,9 +770,7 @@
                     </p>
 
                     <!-- H4.7 -->
-                    <h4>
-                        <a href="glossary.html#maatregelen">Wat kan je zelf doen?</a>
-                    </h4>
+                    <h3>Wat kan je zelf doen?</h3>
 
                     <p>
                         Gebruikers zijn cruciaal voor beveiliging. Verouderde browsers zijn bijvoorbeeld kwetsbaar voor hackers. Een 
