validator en homepagina

--- a/index.html
+++ b/index.html
@@ -42,19 +42,17 @@
                     </header>
                 </article>
 
-                <article id="digitale-veiligheid">
-                    <h2>1. Digitale veiligheid</h2>
-
+                <article id="introductie">
+                    <h2>
+                        Security
+                    </h2>
                     <div class="goals">
-                        <h2 class="goals">Leerdoelen</h2>
+                        <h2 class="goals">Doelen</h2>
 
                         <ol>
-                            <li>Je kent de drie beveiligingsaspecten vertrouwelijkheid, integriteit en beschikbaarheid.</li>
-                            <li>Je kunt verschillende vormen van authenticatie noemen.</li>
-                            <li>Je weet wat two factor authentication betekent.</li>
-                            <li>Je weet het verschil tussen authenticatie, identificatie en verificatie.</li>
-                            <li>Je bent bekend met encryptie en weet het verschil tussen encryptie en hashing.</li>
-                            <li>Je weet wat een DDoS-aanval is.</li>
+                            <li>Jullie informeren over digitale veiligheid met behulp van de informatie in hoofdstuk E2 van fundament</li>
+                            <li>Een vloeiende website maken om gemakkelijk de informatie te verspreiden</li>
+                            <li>Onze kennis en vaardigheden in HTML en CSS vergroten</li>
                         </ol>
                     </div>
     
@@ -81,6 +79,32 @@
                     </p>
                 </article>
 
+                <article id="functies">
+                    <h2>Functies van de website</h2>
+    
+                    <p>
+                        Als leerlingen kunnen we ons inleven in de docent die talloze websites moet nakijken :). Daarom hebben wij een lijst gemaakt met de belangrijkste functies en links naar de pagina's waar ze worden gebruikt.
+                    </p>
+
+                    <div class="goals">
+                        <h2 class="goals">Functies</h2>
+
+                        <ol>
+                            <li>
+                                <a href="index.html">Homepagina</a>
+                            </li>
+                            <li>
+                                <a href="content.html">Samenvatting Fundament Security</a>
+                            </li>
+                            <li>
+                                <a href="content.html">Begrippen Fundament Security</a>
+                            </li>
+                            <li>
+                                <a href="simulation.html">???</a>
+                            </li>
+                        </ol>
+                    </div>
+                </article>
                 <footer>
                     <p>Deze website is gemaakt door Xingqi Zhao en Matthijs Rodts | Stanislascollege Westplantsoen</p>
                 </footer>
