--- a/simulation.html
+++ b/simulation.html
@@ -12,11 +12,11 @@
     <div id="phase-1">
         <div id="desktop">
             <div>
-                <img src="/attachments/icon.png">
+                <img src="/attachments/icon.png" alt="icon">
                 <p>Homework.exe</p>
             </div>
 
-            <img src="/attachments/cursor.png">
+            <img src="/attachments/cursor.png" alt="cursor">
         </div>
 
         <div id="taskbar"></div>
